tests/ui/underscore-imports/shadow.stderr
error[E0659]: `Shadow` is ambiguous
  --> $DIR/shadow.rs:16:19
   |
LL |     use crate::b::Shadow as _; // Only imports the struct
   |                   ^^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a macro-expanded name and a less macro-expanded name from outer scope during import or macro resolution
note: `Shadow` could refer to the struct defined here
  --> $DIR/shadow.rs:10:25
   |
LL |         ($i:ident) => { pub struct $i; }
   |                         ^^^^^^^^^^^^^^
LL |     }
LL |     m!(Shadow);
   |     ---------- in this macro invocation
   = help: use `self::Shadow` to refer to this struct unambiguously
note: `Shadow` could also refer to the trait imported here
  --> $DIR/shadow.rs:8:13
   |
LL |     pub use crate::a::*;
   |             ^^^^^^^^^^^
   = help: use `self::Shadow` to refer to this trait unambiguously
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `deref` found for reference `&()` in the current scope
  --> $DIR/shadow.rs:20:11
   |
LL |         x.deref()
   |           ^^^^^ method not found in `&()`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Deref` which provides `deref` is implemented but not in scope; perhaps you want to import it
   |
LL +     use std::ops::Deref;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0599, E0659.
For more information about an error, try `rustc --explain E0599`.
